<resources>
    <string name="app_name">Virus Killer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">Menu</string>
    <string name="start_game">Start Game</string>
    <string name="help">Help</string>
    <string name="advertisement">Advertisement</string>
    <string name="virus_image">Virus Image</string>
    <string name="game_state_key">game_state_key</string>
    <string name="virus_key">virus_key</string>
    <string name="bonuses_key">bonuses_key</string>
    <string name="money_key">money_key</string>
    <string name="xp_format">%1$s / %2$s</string>
    <string name="shop">Shop</string>
    <string name="upgrade">Upgrade</string>
    <string name="NotLoaded">NotLoaded</string>
    <string name="max_lvl">Max Lvl</string>
    <string name="storage_value_key">Max Lvl</string>
    <string name="last_minute_passed_key">last_minute_passed_key</string>


    <string name="ad_mob_id">ca-app-pub-8557833758890885~4541898244</string>

    <!--    TEST IDS -->
    <string name="banner_bottom_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="fullscreen_ad">ca-app-pub-3940256099942544/1033173712</string>
    <string name="reward_ad">ca-app-pub-3940256099942544/5224354917</string>

    <!--    <string name="banner_bottom_id">ca-app-pub-8557833758890885/7631096012</string>-->
    <!--    <string name="fullscreen_ad">ca-app-pub-8557833758890885/9366795612</string>-->
    <!--    <string name="reward_ad">ca-app-pub-8557833758890885/9758565907</string>-->


    <string name="masks">Masks</string>
    <string name="gloves">Gloves</string>
    <string name="vaccine">Vaccine</string>
    <string name="hand_washing_preparations">Hand washing preparations</string>
    <string name="critical_attack">Critical attack</string>
    <string name="attack_numbers_per_click">Attack numbers per click</string>
    <string name="coins_per_minute">Coins per minute</string>
    <string name="reward_multiplier">Reward multiplier</string>
    <string name="storage">Storage</string>


    <string name="masks_desc">Masks d</string>
    <string name="gloves_desc">Gloves d</string>
    <string name="vaccine_desc">Vaccine d</string>
    <string name="hand_washing_preparations_desc">Hand washing preparations d</string>
    <string name="critical_attack_desc">Critical attack d</string>
    <string name="attack_numbers_per_click_desc">Attack numbers per click d</string>
    <string name="coins_per_minute_desc">Coins per minute d</string>
    <string name="reward_multiplier_desc">Reward multiplier d</string>
    <string name="storage_desc">Storage d</string>


    <string name="snackbar_attack">You get the 2 times more attacks for %1$d minutes</string>
    <string name="cool">Cool</string>
    <string name="anteroom">Anteroom</string>
    <string name="laboratory">Laboratory</string>

    <string name="virus_hp">Virus hp: %1$d</string>
    <string name="virus_reward">Reward: %1$d $</string>
    <string name="virus_lvl">Virus lvl: %1$d</string>
    <string name="killed_viruses">Killed viruses</string>
    <string name="saved_lives">Saved Lives</string>
    <string name="money">Money</string>
    <string name="level">Level</string>
    <string name="ad_reward">Ad Reward</string>
    <string name="crit_desc">Chance for crit: %1$s</string>
    <string name="attack_per_click">Attacks: %1$d</string>

    <string name="infinite_sign">∞</string>
    <string name="money_format">Money: %1$d $</string>
    <string name="bonus_image">Bonus image</string>
    <string name="update_format">Update from %1$s to %2$s</string>
    <string name="max_lvl_format">Current value: %1$s</string>
    <string name="xp">Experience</string>
    <string name="ad_reward_info">Watch ad to get bonus attack</string>
    <string name="back_to_lab">Back To Lab</string>
    <string name="ad_not_loaded">Ad hasn\'t been loaded yet. Wait a moment</string>

    <string name="money_game_format">%1$d $</string>
    <string name="lvl_game_format">Lvl: %1$d</string>

    <!--Help -->
    <string name="base_info">Base Info</string>
    <string name="attacks">Attacks</string>
    <string name="credits">Credits</string>
    <string name="ads">Ads</string>
    <string name="killing_virus">Killing Virus</string>
    <string name="ok">OK</string>

    <string name="base_info_desc">The main objective in this game to save as many human lives as possible and to kill as many viruses as You can. To attack viruses just click on it.</string>
    <string name="attacks_desc">There are two possible attack types. First one, normal attack, to execute just click on virus. And a strong attack, to do it You have to hold a virus for a moment.  Strong attack deals 7 times more damage than a normal one.</string>
    <string name="killing_virus_desc">After killing a virus You\'ll get XP and a money. XP reward is equal to 10% of the money reward.</string>
    <string name="saved_lives_desc">To save human lives You have to buy masks, gloves, vaccines, and hand washing preparations. On every minute You\'ll save some lives equivalent to Your upgrades.</string>
    <string name="storage_desc_help">Every minute You\'ll be getting money to storage. You have to collect them before storage is full, otherwise you can lose money. To collect money from storage just click on the chest in a laboratory.</string>
    <string name="ads_desc">You can watch an ad in Laboratory to get 2 times more attacks per click. Bonus will last 2 minutes. You can watch ads even when bonus from previous ad lasts. Just remember not to leave the laboratory because You can lose the bonus!</string>
    <string name="credits_desc">Image resources come from flaticon.com. Thanks!</string>


</resources>
